{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 125,
  "lineage": "13bfd252-7063-25e9-b35d-0718855349aa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "techno-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08ab4096f36299967",
            "arn": "arn:aws:ec2:us-east-1:919703962183:elastic-ip/eipalloc-08ab4096f36299967",
            "association_id": "eipassoc-04fae06532f4fb5c1",
            "domain": "vpc",
            "id": "eipalloc-08ab4096f36299967",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07b52b9690a1c2356",
            "private_dns": "ip-25-1-0-127.ec2.internal",
            "private_ip": "25.1.0.127",
            "public_dns": "ec2-52-3-184-111.compute-1.amazonaws.com",
            "public_ip": "52.3.184.111",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "techno-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:919703962183:internet-gateway/igw-091d31a4ae31d0a0e",
            "id": "igw-091d31a4ae31d0a0e",
            "owner_id": "919703962183",
            "region": "us-east-1",
            "vpc_id": "vpc-0b604814165ead076"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.techno-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "tehcno-ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08ab4096f36299967",
            "association_id": "eipassoc-04fae06532f4fb5c1",
            "connectivity_type": "public",
            "id": "nat-00164b2f17f669894",
            "network_interface_id": "eni-07b52b9690a1c2356",
            "private_ip": "25.1.0.127",
            "public_ip": "52.3.184.111",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-033e6ddf6ab7aaa91"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.techno-ip",
            "aws_subnet.Public-A",
            "aws_vpc.techno-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "techno-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:919703962183:route-table/rtb-0ad3e02ef0d7bf3c2",
            "id": "rtb-0ad3e02ef0d7bf3c2",
            "owner_id": "919703962183",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00164b2f17f669894",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b604814165ead076"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.techno-ip",
            "aws_nat_gateway.tehcno-ngw",
            "aws_subnet.Public-A",
            "aws_vpc.techno-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "techno-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:919703962183:route-table/rtb-0726c9d4fcdbd0f69",
            "id": "rtb-0726c9d4fcdbd0f69",
            "owner_id": "919703962183",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-091d31a4ae31d0a0e",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-091d31a4ae31d0a0e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b604814165ead076"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.techno-igw",
            "aws_vpc.techno-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "techno-public-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0318384dda94f0955",
            "region": "us-east-1",
            "route_table_id": "rtb-0726c9d4fcdbd0f69",
            "subnet_id": "subnet-033e6ddf6ab7aaa91"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.techno-igw",
            "aws_route_table.techno-rt",
            "aws_subnet.Public-A",
            "aws_vpc.techno-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "techno-public-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f6b910b94f4f3aed",
            "region": "us-east-1",
            "route_table_id": "rtb-0726c9d4fcdbd0f69",
            "subnet_id": "subnet-066054c3171fbd83c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.techno-igw",
            "aws_route_table.techno-rt",
            "aws_subnet.Public-B",
            "aws_vpc.techno-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tehcno-private-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02807883b0ab18061",
            "region": "us-east-1",
            "route_table_id": "rtb-0ad3e02ef0d7bf3c2",
            "subnet_id": "subnet-03bb17e788e936364"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.techno-ip",
            "aws_nat_gateway.tehcno-ngw",
            "aws_route_table.techno-private",
            "aws_subnet.Private-A",
            "aws_subnet.Public-A",
            "aws_vpc.techno-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tehcno-private-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0d91dc74efe1d04",
            "region": "us-east-1",
            "route_table_id": "rtb-0ad3e02ef0d7bf3c2",
            "subnet_id": "subnet-03dfa305e309ae540"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.techno-ip",
            "aws_nat_gateway.tehcno-ngw",
            "aws_route_table.techno-private",
            "aws_subnet.Private-B",
            "aws_subnet.Public-A",
            "aws_vpc.techno-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "techno-apps",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:919703962183:security-group/sg-002f6aea93d2fe650",
            "description": "Allow apps inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-002f6aea93d2fe650",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 2000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2000
              }
            ],
            "name": "techno-sg-apps",
            "name_prefix": "",
            "owner_id": "919703962183",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b604814165ead076"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.techno-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "techno-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:919703962183:security-group/sg-01624911488373b4b",
            "description": "Allow lb inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01624911488373b4b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "techno-sg-lb",
            "name_prefix": "",
            "owner_id": "919703962183",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b604814165ead076"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.techno-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:919703962183:subnet/subnet-03bb17e788e936364",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "25.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03bb17e788e936364",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "919703962183",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-0b604814165ead076"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.techno-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Private-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:919703962183:subnet/subnet-03dfa305e309ae540",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "25.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03dfa305e309ae540",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "919703962183",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-0b604814165ead076"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.techno-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:919703962183:subnet/subnet-033e6ddf6ab7aaa91",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "25.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": true,
            "id": "subnet-033e6ddf6ab7aaa91",
            "ipv6_cidr_block": "2600:1f18:54d1:c500::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-06240fabc6d36588b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "919703962183",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-0b604814165ead076"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.techno-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Public-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:919703962183:subnet/subnet-066054c3171fbd83c",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "25.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": true,
            "id": "subnet-066054c3171fbd83c",
            "ipv6_cidr_block": "2600:1f18:54d1:c501::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0382250a5ad2d398e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "919703962183",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "vpc_id": "vpc-0b604814165ead076"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.techno-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "techno-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:919703962183:vpc/vpc-0b604814165ead076",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "25.1.0.0/16",
            "default_network_acl_id": "acl-03dc62003b169b468",
            "default_route_table_id": "rtb-0928343b12724d90d",
            "default_security_group_id": "sg-0e69cfd7962fa96ef",
            "dhcp_options_id": "dopt-01c6643d869578c41",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b604814165ead076",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0cbcbd6e88267a011",
            "ipv6_cidr_block": "2600:1f18:54d1:c500::/56",
            "ipv6_cidr_block_network_border_group": "us-east-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0928343b12724d90d",
            "owner_id": "919703962183",
            "region": "us-east-1",
            "tags": {
              "Name": "techno-akbar"
            },
            "tags_all": {
              "Name": "techno-akbar"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}